# inter-process-communication-project

./: .gitignore  CMakeLists.txt  README.md
backend/: CMakeLists.txt
backend/src/: main.cpp
backend/src/common/: logger.cpp  logger.h
backend/src/ipc/: ipc_coordinator.cpp  ipc_coordinator.h  pipe_manager.cpp  pipe_manager.h  shmem_manager.cpp  shmem_manager.h  socket_manager.cpp  socket_manager.h
backend/src/server/: http_server.cpp  http_server.h
frontend/: index.html  script.js  styles.css
tests/: CMakeLists.txt  run_tests.sh
tests/integration/: test_full_flow.cpp
tests/unit/: test_coordinator.cpp  test_http_server.cpp  test_shmem.cpp
